<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boiler_status" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="290dp"
        android:layout_height="285dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/texview_design"
        android:text="32"
        android:textAlignment="center"
        android:textSize="190sp" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewHeater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_level"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editTextWaterLevel"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approx_volume"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editTextVolume"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextEnterTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_final_temperature"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonBoil"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:text="@string/boil_water" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="00:00"
        android:textSize="60sp" />

</LinearLayout>